src/views/catalog/CreateFromInstanceTypes/components/BootableVolumeList/BootableVolumeList.scss
.bootable-volume-list-bar {
  margin-top: var(--pf-t--global--spacer--md);
  &__filter {
    margin-top: 1.25rem;
  }

  &__pagination {
    margin-top: var(--pf-t--global--spacer--md);
  }

  &__show-all-btn {
    margin-top: calc(var(--pf-t--global--spacer--md) + var(--pf-t--global--spacer--xs));
  }

  &__volume-namespace {
    width: fit-content;
    .pf-v6-c-form__label {
      margin-bottom: 0;
    }
  }
}

